# MultiModal-RAG

./: README.md
Multimodal-RAG/: README.md  chunks.pkl  final_chunks.json  main.py  pyproject.toml  requirements.txt
Multimodal-RAG/chroma_db/: chroma.sqlite3
Multimodal-RAG/docstore/: 07d282fa-2976-4c5d-92b5-b5b2fda08d30  09a7dbf1-39b6-46d2-82d0-4f206bb5f678  0ad84f61-e025-432b-a41b-f4b7b9dd126d  114a5941-44e4-4728-a8d7-0acc7b46592d  114be326-2664-4933-9a17-c972bbdba15a  45a37cfb-c0af-4f9f-8550-f3fddfd8b5b3  6d6084c4-9b59-4de1-b172-30fda4a95ed7  c791127b-34e6-4484-88ed-87c63ede1588  cf8aa816-dac1-4a43-abbd-dbc321677f0a  d2b23c91-5a04-4f63-833e-a584170640f7  e6f7213a-2828-47c9-9b48-2cf1aa9123a2  f9d608ff-84e9-42a1-91fa-6c7c4aa2ca5d
Multimodal-RAG/src/: chains.py  preprocess.py  vectorstore.py
