[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "ipython>=9.3.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-ollama>=0.3.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
    "unstructured[all-docs]>=0.17.2",
]
